77) kernel: net: packet: improve socket create/bind latency in some cases.<br>
78) kernel: net: packet: race condition in packet_bind.<br>
79) kernel: net: ipv6: don't call fib6_run_gc() until routing is ready.<br>
80) kernel: net: ipv6: update ip6_rt_last_gc every time GC is run.<br>
81) kernel: net: tcp: make challenge acks less predictable (CVE-2016-5696).<br>
82) kernel: net: tcp: md5: fix lockdep annotation.<br>
83) kernel: net: tcp: consider recv buf for the initial window scale.<br>
84) kernel: net: tcp: fix use after free in tcp_xmit_retransmit_queue().<br>
85) kernel: net: netfilter: replace strnicmp with strncasecmp.<br>
86) kernel: net: netfilter: avoid race with exp->master ct.<br>
87) kernel: net: netfilter: conntrack: only need first 4 bytes to get l4proto ports.<br>
88) kernel: net: netfilter: conntrack: don't attempt to iterate over empty table.<br>
89) kernel: net: netfilter: nf_conntrack_sip: CSeq 0 is a valid CSeq.<br>
90) kernel: net: netfilter: xt_mark, xt_connmark: do not skip HW_NAT on RA_HW_NAT_QDMA enabled.<br>
91) kernel: net: netfilter: nf_ct_h323: do not re-activate already expired timer.<br>
92) kernel: net: netfilter: ctnetlink: reject new conntrack request with different l4proto.<br>
93) kernel: net: netfilter: gre: Use consistent GRE_* macros instead of ones defined by netfilter.<br>
94) kernel: net: netfilter: gre: Use consistent GRE and PTTP header structure instead of the ones defined by netfilter.<br>
95) kernel: net: netfilter: ftp: Remove the useless dlen==0 condition check in find_pattern.<br>
96) kernel: net: netfilter: ftp: Remove the useless code.<br>
97) kernel: net: netfilter: nf_ct_sip: correct parsing of continuation lines in SIP headers.<br>
98) kernel: net: netfilter: nf_ct_sip: correct allowed characters in Call-ID SIP header.<br>
99) kernel: net: netfilter: nf_ct_sip: allow tab character in SIP headers.<br>
<br>
<br>
<b>4.7.x</b><br>
1) kernel: net: packet: tx timestamping on tpacket ring.<br>
<br>
<br>
<br>