@@ -2389,7 +2389,8 @@
 <br>
 <br>
 <b>4.7.x</b><br>
-1) kernel: net: packet: tx timestamping on tpacket ring.<br>
+1) kernel: mips: barrier: Add definitions of SYNC stype values.<br>
+2) kernel: net: packet: tx timestamping on tpacket ring.<br>
 <br>
 <br>
 <br>
